# AISE-Curriculum-Weekly

./: .markdownlint.json  README.md  cspell.json  test_code.js  test_code.py
LeetCode/: design-parking.py
pygame/: asteroids_deluxe.py  class.py  game.py
week-01/week01day01-breakouts/breakout01/: README.md  demo.py
week-01/week01day01-breakouts/breakout02/: starter_template.py
week01day01/: INSTRUCTOR_GUIDE.md  README.md  STARTER_CODE_INTEGRATION.md  requirements.txt  starter_code_implementation.py  test_calculator.py
week01day01-breakouts/breakout02/: function_ideas.md  personal_toolkit.py  starter_template.py
week01day01/breakout01/: README.md.backup  personal_finance_calculator.py  pyproject.toml
week01day01/breakout02/: README.md  function_ideas.md  personal_toolkit.py
week04/wk04d01/: BR2.html  OnePager.html
week04/wk04d02/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  W4D2 Enhanced Breakout Activities.MD  breakout03.py  requirements.txt  test_api.py
week04/wk04d04/: .env.example  .gitignore  README.md  config.py  examples.py  myLogger.py  myServer.py  requirements.txt  test_myServer.py
week05/codeAlong/: .gitignore  BREAKOUT_IMPLEMENTATION.md  README.md  app.py  pyproject.toml  requirements.txt
week05/codeAlong/src/application/: order_service.py  ports.py
week05/codeAlong/src/domain/: order.py
week05/codeAlong/src/infrastructure/: inmemory_repo.py
week05/codeAlong/tests/: test_order_service.py
week05/wk05d2/: tests.py
week05/wk05d2/src/application/: order_service.py
week05/wk05d2/src/domain/: order.py  repository.py
week05/wk05d2/src/infrastructure/: inmemory_repo.py
wk04d01/: BR1.html  breakout02.py
